namespace/monitoring/headlamp/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: headlamp
          port: 80
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`headlamp.oglesby.io`)
      kind: Rule
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
      services:
        - name: headlamp
          port: 80
